--- a/analyzecrystal_example.ipynb
+++ b/analyzecrystal_example.ipynb
@@ -602,7 +602,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you have multiple crystal structures in the dataset, just the results for all of the labels. "
+    "If you have multiple crystal structures in the dataset, just use the results for all of the labels. "
    ]
   }
  ],
