Auto stash before merge of "master" and "origin/master"

--- a/analyzecrystal_example.ipynb
+++ b/analyzecrystal_example.ipynb
@@ -18,9 +18,15 @@
    "outputs": [],
    "source": [
     "from datageneration.generatecrystaldata import fill_volume_fcc\n",
-    "from datageneration.disordercrystaldata import add_gaussian_noise\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**fill_volume_fcc(x_limit,y_limit,z_limit)** will fill a 3D volume with the fcc crystal structure. The neighbor distances are normalized to 1."
    ]
   },
   {
@@ -51,12 +57,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Noisy Data:"
+    "## Noisy Data:\n",
+    "**add_gaussian_noise(datapoints, sigma, rnd_seed)** will distort the crystal with gaussian distributed noise (sigma is the width of the gaussian)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -71,6 +78,7 @@
     }
    ],
    "source": [
+    "from datageneration.disordercrystaldata import add_gaussian_noise\n",
     "fcc_data_noise=add_gaussian_noise(fcc_data,0.07,0)\n",
     "fig = plt.figure(figsize=(20, 10))\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
@@ -515,7 +523,7 @@
    "metadata": {},
    "source": [
     "## Classification of the crystal structures\n",
-    "To predict the crystal structures, the pre-trained standardscaler and mlpclassifier are loaded with pickle."
+    "To predict the crystal structures, the pre-trained [standardscaler](http://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html) and [mlpclassifier](http://scikit-learn.org/stable/modules/generated/sklearn.neural_network.MLPClassifier.html) from [sklearn](http://scikit-learn.org/) are loaded with pickle."
    ]
   },
   {
@@ -602,8 +610,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you have multiple crystal structures in the dataset, just use the results for all of the labels. "
+    "If you have multiple crystal structures in the dataset, just plot the results for all labels. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
